<resources>
    <string name="app_name">WeBank</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="current_amount">Saved: SGD&#160;</string>
    <string name="target_amount">Goal: SGD&#160;</string>
    <string name="saving_goals"><b>Saving Goals</b></string>
    <string name="goal_detail"><b>Goal Detail</b></string>
    <string name="goal_progress">Goal in Progress</string>
    <string name="goal_completed">Completed:&#160;</string>
    <string name="group_member">Group Member:&#160;</string>
    <string name="new_goal"><b>New Goal</b></string>
    <string name="new_goal_name">Your goal\'s name</string>
    <string name="new_goal_target">Your target amount</string>
    <string name="create_goal"><b>CREATE GOAL</b></string>
    <string name="private_goal">Set as Private Goal</string>
    <string name="save_now">Save Now</string>
    <string-array name="currency">
        <item>SGD</item>
    </string-array>
    <string name="operation"><b>Congratulations</b></string>
    <string name="content_text">You have achieved the goal and all the group members will be rewarded!</string>
    <string name="ok">OK</string>
    <string name="quit">QUIT</string>
    <string name="cancel">CANCEL</string>
    <string name="log_out_text">Sure to exit?</string>
    <string name="warning"><b>Warning</b></string>
    <string name="warning_text">&#160;days from the target deadline</string>
</resources>
